updated proto to recent swagger version
