# gen/rest_api/operations/d_t_a_server/d_t_a_server_options_responses.go
@@ -1,116 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package d_t_a_server
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/theovassiliou/doctrans/gen/rest_models"
-)
-
-// DTAServerOptionsOKCode is the HTTP code returned for type DTAServerOptionsOK
-const DTAServerOptionsOKCode int = 200
-
-/*DTAServerOptionsOK A successful response.
-
-swagger:response dTAServerOptionsOK
-*/
-type DTAServerOptionsOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *rest_models.DtaserviceOptionsResponse `json:"body,omitempty"`
-}
-
-// NewDTAServerOptionsOK creates DTAServerOptionsOK with default headers values
-func NewDTAServerOptionsOK() *DTAServerOptionsOK {
-
-	return &DTAServerOptionsOK{}
-}
-
-// WithPayload adds the payload to the d t a server options o k response
-func (o *DTAServerOptionsOK) WithPayload(payload *rest_models.DtaserviceOptionsResponse) *DTAServerOptionsOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the d t a server options o k response
-func (o *DTAServerOptionsOK) SetPayload(payload *rest_models.DtaserviceOptionsResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DTAServerOptionsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*DTAServerOptionsDefault An unexpected error response
-
-swagger:response dTAServerOptionsDefault
-*/
-type DTAServerOptionsDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *rest_models.RuntimeError `json:"body,omitempty"`
-}
-
-// NewDTAServerOptionsDefault creates DTAServerOptionsDefault with default headers values
-func NewDTAServerOptionsDefault(code int) *DTAServerOptionsDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &DTAServerOptionsDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the d t a server options default response
-func (o *DTAServerOptionsDefault) WithStatusCode(code int) *DTAServerOptionsDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the d t a server options default response
-func (o *DTAServerOptionsDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the d t a server options default response
-func (o *DTAServerOptionsDefault) WithPayload(payload *rest_models.RuntimeError) *DTAServerOptionsDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the d t a server options default response
-func (o *DTAServerOptionsDefault) SetPayload(payload *rest_models.RuntimeError) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DTAServerOptionsDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
