# gen/rest_api/operations/d_t_a_server/d_t_a_server_transform_document.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package d_t_a_server
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-)
-
-// DTAServerTransformDocumentHandlerFunc turns a function with the right signature into a d t a server transform document handler
-type DTAServerTransformDocumentHandlerFunc func(DTAServerTransformDocumentParams) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn DTAServerTransformDocumentHandlerFunc) Handle(params DTAServerTransformDocumentParams) middleware.Responder {
-	return fn(params)
-}
-
-// DTAServerTransformDocumentHandler interface for that can handle valid d t a server transform document params
-type DTAServerTransformDocumentHandler interface {
-	Handle(DTAServerTransformDocumentParams) middleware.Responder
-}
-
-// NewDTAServerTransformDocument creates a new http.Handler for the d t a server transform document operation
-func NewDTAServerTransformDocument(ctx *middleware.Context, handler DTAServerTransformDocumentHandler) *DTAServerTransformDocument {
-	return &DTAServerTransformDocument{Context: ctx, Handler: handler}
-}
-
-/*DTAServerTransformDocument swagger:route POST /v1/document/transform DTAServer dTAServerTransformDocument
-
-Request to transform a plain text document
-
-*/
-type DTAServerTransformDocument struct {
-	Context *middleware.Context
-	Handler DTAServerTransformDocumentHandler
-}
-
-func (o *DTAServerTransformDocument) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		r = rCtx
-	}
-	var Params = NewDTAServerTransformDocumentParams()
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params) // actually handle the request
-
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
