# gen/rest_api/operations/d_t_a_server/transform_document_parameters.go
@@ -16,18 +16,18 @@ import (
 	"github.com/theovassiliou/doctrans/gen/rest_models"
 )
 
-// NewDTAServerTransformDocumentParams creates a new DTAServerTransformDocumentParams object
+// NewTransformDocumentParams creates a new TransformDocumentParams object
 // no default values defined in spec.
-func NewDTAServerTransformDocumentParams() DTAServerTransformDocumentParams {
+func NewTransformDocumentParams() TransformDocumentParams {
 
-	return DTAServerTransformDocumentParams{}
+	return TransformDocumentParams{}
 }
 
-// DTAServerTransformDocumentParams contains all the bound params for the d t a server transform document operation
+// TransformDocumentParams contains all the bound params for the transform document operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters DTAServer_TransformDocument
-type DTAServerTransformDocumentParams struct {
+// swagger:parameters TransformDocument
+type TransformDocumentParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
@@ -42,8 +42,8 @@ type DTAServerTransformDocumentParams struct {
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewDTAServerTransformDocumentParams() beforehand.
-func (o *DTAServerTransformDocumentParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewTransformDocumentParams() beforehand.
+func (o *TransformDocumentParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
